static/home.css
.home-area-container {
    display: flex;
    flex-direction: column; /* Ensure all sections are in column format */
    gap: 10px;
    height: 100vh; /* Full viewport height */
    margin-left: 5px;
    margin-right: 5px;
}

.home-area {
    background-color: #f9f9f9;
    overflow: auto;
    border: 1px solid #ccc;
    padding: 5px;
    box-sizing: border-box;
    white-space: pre-wrap;
    font-family: 'Patrick Hand';
    font-size: 14px;
}

/* Assigning height percentages */
#HomeArea_1 {
    height: 40%;
}

#HomeArea_2 {
    height: 40%;
}

/* Desktop Layout */
@media (min-width: 768px) {
    .home-area {
        width: auto;
    }
}

/* Mobile Layout */
@media (max-width: 767px) {
    .home-area-container {
        height: 100vh;
    }

    #HomeArea_1, #HomeArea_2 {
        width: 100%;
    }
}

/* Typing Animation */
#HomeArea_1 {
    font-family: 'Patrick Hand';
    font-size: 1em;
    font-weight: bold;
    text-align: center;
    color: #fcf805;
    white-space: nowrap;
    overflow: hidden;
    /* border-right: 2px solid #333; */
    display: inline-block;

    /* Background Image */
    background-image: url("/static/kupmanduk_background_home_area_1.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

@keyframes typing {
    from { width: 0; }
    to { width: 100%; }
}

@keyframes blink {
    50% { border-color: transparent; }
}

